--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build:dev": "webpack --mode development",
     "build:start": "cd dist && PORT=4211 npx serve",
     "start": "webpack serve --mode development",
+    "start:prod": "webpack serve --mode production",
     "start:live": "webpack serve --mode development --live-reload --hot",
     "test": "jest"
   },
