--- a/package.json
+++ b/package.json
@@ -21,26 +21,28 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/jest": "^27.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
+    "dotenv-webpack": "^8.0.1",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^27.0.0",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
     "style-loader": "^3.3.0",
+    "tailwindcss": "^3.4.1",
+    "ts-jest": "^27.0.0",
     "typescript": "^4.5.2",
     "webpack": "^5.57.1",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.3.1",
-    "dotenv-webpack": "^8.0.1",
-    "tailwindcss": "^3.4.1",
-    "jest": "^27.0.0",
-    "ts-jest": "^27.0.0",
-    "@types/jest": "^27.0.0"
+    "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "crypto-js": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
